create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1245,12 +1245,12 @@ section.lazy-placeholder:after {
 .cid-rPHUiBYQwP H2 {
   color: #ffffff;
 }
-.cid-rRvjA0QeVH {
+.cid-rSTVyO9Wfu {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 15px;
   background-color: #0c5c66;
 }
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
+.cid-rSTVyO9Wfu .media-container-row .mbr-text {
   text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
@@ -1795,14 +1795,6 @@ section.lazy-placeholder:after {
 .cid-rQ00qHjWWD H2 {
   color: #ffffff;
 }
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #02595c;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
-}
 .cid-rKmufL1QpC {
   padding-top: 45px;
   padding-bottom: 30px;
@@ -1898,6 +1890,14 @@ section.lazy-placeholder:after {
 .cid-rKmu9RFUk5 .mbr-section-title {
   color: #232323;
 }
+.cid-rSTYmesbyp {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #0c5c66;
+}
+.cid-rSTYmesbyp .media-container-row .mbr-text {
+  text-align: center;
+}
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
   background: #0c5c66;
@@ -2292,14 +2292,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0c5c66;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
-}
 .cid-rRFUVaDFDa {
   padding-top: 60px;
   padding-bottom: 30px;
@@ -2315,8 +2307,8 @@ section.lazy-placeholder:after {
 }
 .cid-rRBxJgxiCh {
   padding-top: 15px;
-  padding-bottom: 105px;
-  background-color: #fbfbfb;
+  padding-bottom: 96px;
+  background-color: #f4fcfc;
 }
 .cid-rRBxJgxiCh .card-box {
   border-radius: 24px;
@@ -2353,6 +2345,14 @@ section.lazy-placeholder:after {
 .cid-rRBxJgxiCh .card-title {
   color: #06a5ab;
 }
+.cid-rSTWKbAsk7 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #0c5c66;
+}
+.cid-rSTWKbAsk7 .media-container-row .mbr-text {
+  text-align: center;
+}
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
   background: #0c5c66;
@@ -2746,14 +2746,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .nav-link:hover,
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
-}
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0c5c66;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
@@ -3152,7 +3144,7 @@ section.lazy-placeholder:after {
 .cid-rRTUTLgWqX {
   padding-top: 120px;
   padding-bottom: 15px;
-  background-color: #fbfbfb;
+  background-color: #fdfdfd;
 }
 .cid-rRTUTLgWqX .mbr-section-subtitle {
   color: #5a5959;
@@ -3166,7 +3158,7 @@ section.lazy-placeholder:after {
   padding-top: 0px;
   padding-bottom: 135px;
   position: relative;
-  background-color: #fbfbfb;
+  background-color: #fdfdfd;
 }
 .cid-rRTUG7sauO p {
   color: #767676;
@@ -3211,12 +3203,12 @@ section.lazy-placeholder:after {
   color: #717475;
   text-align: left;
 }
-.cid-rRvjA0QeVH {
+.cid-rSTYB7nIrS {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #0b5355;
+  background-color: #0c5c66;
 }
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
+.cid-rSTYB7nIrS .media-container-row .mbr-text {
   text-align: center;
 }
 .cid-rRGgOLs9VE {
@@ -3629,7 +3621,7 @@ section.lazy-placeholder:after {
 .cid-rRGgPyPVDd {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #fbfbfb;
+  background-color: #f4fcfc;
 }
 .cid-rRGgPyPVDd .card-box {
   border-radius: 24px;
@@ -3669,7 +3661,7 @@ section.lazy-placeholder:after {
 .cid-rRGgQ95xpq {
   padding-top: 0px;
   padding-bottom: 45px;
-  background-color: #fbfbfb;
+  background-color: #f4fcfc;
 }
 .cid-rRGgQ95xpq .card-box {
   border-radius: 24px;
@@ -3705,14 +3697,6 @@ section.lazy-placeholder:after {
 }
 .cid-rRGgQ95xpq .card-title {
   color: #06a5ab;
-}
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0c5c66;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
@@ -4241,12 +4225,12 @@ section.lazy-placeholder:after {
 .cid-rRG9PAZC6R .card-title {
   color: #06a5ab;
 }
-.cid-rRvjA0QeVH {
+.cid-rSTYxVQ3iz {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #0c5c66;
 }
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
+.cid-rSTYxVQ3iz .media-container-row .mbr-text {
   text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
@@ -4643,14 +4627,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0b5355;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
-}
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
   background: #0c5c66;
@@ -5045,14 +5021,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0c5c66;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
-}
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
   background: #0c5c66;
@@ -5446,14 +5414,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .nav-link:hover,
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
-}
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #0b5355;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
@@ -5852,7 +5812,7 @@ section.lazy-placeholder:after {
 .cid-rRv6GrGCiW {
   padding-top: 120px;
   padding-bottom: 15px;
-  background-color: #fbfbfb;
+  background-color: #f4fcfc;
 }
 .cid-rRv6GrGCiW .mbr-section-subtitle {
   color: #5a5959;
@@ -5864,9 +5824,9 @@ section.lazy-placeholder:after {
 }
 .cid-rRv6HsfOF5 {
   padding-top: 0px;
-  padding-bottom: 135px;
+  padding-bottom: 60px;
   position: relative;
-  background-color: #fbfbfb;
+  background-color: #f4fcfc;
 }
 .cid-rRv6HsfOF5 p {
   color: #767676;
@@ -5911,12 +5871,74 @@ section.lazy-placeholder:after {
   color: #717475;
   text-align: left;
 }
-.cid-rRvjA0QeVH {
+.cid-rSmuMCLM3y {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #f4fcfc;
+}
+.cid-rSmuMCLM3y .mbr-section-subtitle {
+  color: #5a5959;
+  text-align: left;
+}
+.cid-rSmuMCLM3y H2 {
+  color: #056f7c;
+  text-align: left;
+}
+.cid-rSmu1tlApG {
+  padding-top: 0px;
+  padding-bottom: 135px;
+  position: relative;
+  background-color: #f4fcfc;
+}
+.cid-rSmu1tlApG p {
+  color: #767676;
+}
+.cid-rSmu1tlApG .card {
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
+.cid-rSmu1tlApG .card .card-header {
+  border-radius: 12px;
+  border: 0px;
+  background-color: #fcfcfc;
+  padding: 0;
+}
+.cid-rSmu1tlApG .card .card-header a.panel-title {
+  margin-bottom: 0;
+  background-color: white;
+  border-radius: 12px;
+  margin-top: -1px;
+  font-weight: 500;
+  font-style: normal;
+  display: block;
+  text-decoration: none !important;
+  line-height: normal;
+}
+.cid-rSmu1tlApG .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-rSmu1tlApG .card .card-header a.panel-title h4 {
+  border: 1px solid #b3b3b3;
+  padding: 0.7rem 0.7rem;
+  border-radius: 12px;
+  margin-bottom: 0;
+}
+.cid-rSmu1tlApG .card .card-header a.panel-title h4 .sign {
+  padding-right: 0.5rem;
+}
+.cid-rSmu1tlApG .panel-text {
+  color: #5a5959;
+}
+.cid-rSmu1tlApG H4 {
+  color: #717475;
+  text-align: left;
+}
+.cid-rSTYtZmyxf {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #0c5c66;
 }
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
+.cid-rSTYtZmyxf .media-container-row .mbr-text {
   text-align: center;
 }
 .cid-rRGoczz3PL {
@@ -6011,6 +6033,14 @@ section.lazy-placeholder:after {
 }
 .cid-rRTXpbK5QA .card-title {
   color: #0fa79c;
+}
+.cid-rSTVVct2GI {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #0c5c66;
+}
+.cid-rSTVVct2GI .media-container-row .mbr-text {
+  text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
@@ -6405,14 +6435,6 @@ section.lazy-placeholder:after {
 .cid-rPHEnKkXn2 .nav-link:hover,
 .cid-rPHEnKkXn2 .dropdown-item:hover {
   color: #c1c1c1 !important;
-}
-.cid-rRvjA0QeVH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #02595c;
-}
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
-  text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
   padding: .5rem 0;
@@ -6811,132 +6833,27 @@ section.lazy-placeholder:after {
 .cid-rRHLTQX4Su {
   padding-top: 120px;
   padding-bottom: 60px;
-  background-color: #feffff;
+  background-color: #fbfbfb;
 }
 .cid-rRHLTQX4Su .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
   text-align: left;
 }
 .cid-rRHLTQX4Su H2 {
   text-align: left;
   color: #02595c;
 }
-.cid-rRHPFvtsKt {
-  background: #f4fcfc;
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #f4fcfc, #f4fcfc);
-}
-.cid-rRHPFvtsKt .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rRHPFvtsKt .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rRHSsuwIkh {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f4fcfc;
-}
-.cid-rRHSsuwIkh .counter-container {
-  color: #767676;
-}
-.cid-rRHSsuwIkh .counter-container ol {
-  margin-bottom: 0;
-  counter-reset: myCounter;
-}
-.cid-rRHSsuwIkh .counter-container ol li {
-  margin-bottom: 1rem;
-}
-.cid-rRHSsuwIkh .counter-container ol li {
-  list-style: none;
-  padding-left: .5rem;
-}
-.cid-rRHSsuwIkh .counter-container ol li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  counter-increment: myCounter;
-  content: counter(myCounter);
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 40px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.cid-rRHSthVBjM {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f4fcfc;
-}
-.cid-rRHSthVBjM .counter-container {
-  color: #767676;
-}
-.cid-rRHSthVBjM .counter-container ul {
-  margin-bottom: 0;
-}
-.cid-rRHSthVBjM .counter-container ul li {
-  margin-bottom: 1rem;
-  list-style: none;
-}
-.cid-rRHSthVBjM .counter-container ul li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  padding-top: 3px;
-  content: '';
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 20px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  content: '✓';
-}
-.cid-rRHPEq2tc5 {
-  background: #f4fcfc;
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #f4fcfc, #f4fcfc);
-}
-.cid-rRHPEq2tc5 .image-block {
-  margin: auto;
-}
-.cid-rRHPEq2tc5 figcaption {
-  position: relative;
-}
-.cid-rRHPEq2tc5 figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rRHPEq2tc5 .image-block {
-    width: 100% !important;
-  }
-}
 .cid-rRHOmOcxgW {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #f4fcfc;
 }
-.cid-rRvjA0QeVH {
+.cid-rSZV3W56b9 {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #0c5c66;
 }
-.cid-rRvjA0QeVH .media-container-row .mbr-text {
+.cid-rSZV3W56b9 .media-container-row .mbr-text {
   text-align: center;
 }
 .cid-rPHEnKkXn2 .navbar {
