--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6025,8 +6025,8 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-rUYvho9qO5 {
-  padding-top: 90px;
-  padding-bottom: 15px;
+  padding-top: 105px;
+  padding-bottom: 0px;
   background-color: #f7fcfc;
 }
 .cid-rUYvho9qO5 H2 {
@@ -6058,7 +6058,7 @@ section.lazy-placeholder:after {
 .cid-rUVcoz4IRh .mbr-text,
 .cid-rUVcoz4IRh .mbr-section-btn {
   text-align: left;
-  color: #243b38;
+  color: #716f6f;
 }
 .cid-rUVIzc84zw {
   padding-top: 0px;
@@ -6076,7 +6076,7 @@ section.lazy-placeholder:after {
 .cid-rUVIzc84zw .mbr-text,
 .cid-rUVIzc84zw .mbr-section-btn {
   text-align: left;
-  color: #243b38;
+  color: #716f6f;
 }
 .cid-rUVK1Fm7uD {
   padding-top: 0px;
@@ -6137,7 +6137,7 @@ section.lazy-placeholder:after {
 .cid-rUVJi3PDTK .mbr-text,
 .cid-rUVJi3PDTK .mbr-section-btn {
   text-align: left;
-  color: #243b38;
+  color: #716f6f;
 }
 .cid-rUVAdOhRXP {
   padding-top: 0px;
