--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,24 +1,30 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
+
+
+
+
+
 body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'font';
-  font-size: 1.6rem;
-  font-display: swap;
-}
-.display-1 > .mbr-iconfont {
-  font-size: 2.56rem;
-}
-.display-2 {
-  font-family: 'font';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.7rem;
   font-display: swap;
 }
-.display-2 > .mbr-iconfont {
+.display-1 > .mbr-iconfont {
   font-size: 2.72rem;
 }
+.display-2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.6rem;
+  font-display: swap;
+}
+.display-2 > .mbr-iconfont {
+  font-size: 2.56rem;
+}
 .display-4 {
-  font-family: 'font';
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -26,7 +32,7 @@ body {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'font';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
   font-display: swap;
 }
@@ -34,7 +40,7 @@ body {
   font-size: 1.92rem;
 }
 .display-7 {
-  font-family: 'font';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   font-display: swap;
 }
@@ -48,14 +54,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 1.28rem;
-    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
-  }
-  .display-2 {
     font-size: 1.36rem;
     font-size: calc( 1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20)));
     line-height: calc( 1.4 * (1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20))));
+  }
+  .display-2 {
+    font-size: 1.28rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -540,7 +546,7 @@ a:hover {
   border-radius: 100px;
 }
 .form-control {
-  font-family: 'font';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   font-display: swap;
 }
