create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1110,7 +1110,7 @@ section.lazy-placeholder:after {
   background-color: #0c5c66;
 }
 .cid-rWvjG3NauQ H2 {
-  color: #74c9c3;
+  color: #beece8;
   text-align: center;
 }
 .cid-rWvjG3NauQ .mbr-section-subtitle {
