--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -41,11 +41,11 @@ body {
 }
 .display-7 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.04rem;
   font-display: swap;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.76rem;
+  font-size: 1.664rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -547,11 +547,11 @@ a:hover {
 }
 .form-control {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.04rem;
   font-display: swap;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.76rem;
+  font-size: 1.664rem;
 }
 blockquote {
   border-color: #b0deda;
@@ -1155,7 +1155,7 @@ section.lazy-placeholder:after {
   overflow: hidden;
 }
 .cid-rWvkrjj0kl .card-title {
-  color: #0fa79c;
+  color: #0fb4a9;
 }
 .cid-rWvkscx2iS {
   padding-top: 0px;
