create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1155,87 +1155,87 @@ section.lazy-placeholder:after {
   overflow: hidden;
 }
 .cid-rWvkrjj0kl .card-title {
-  color: #0fb4a9;
+  color: #118c84;
 }
-.cid-rWvkscx2iS {
+.cid-rWA2EFEjVD {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #f4fcfc;
 }
-.cid-rWvkscx2iS .card-box {
+.cid-rWA2EFEjVD .card-box {
   border-radius: 24px;
   background-color: #ffffff;
   padding: 1.5rem;
 }
-.cid-rWvkscx2iS h4 {
+.cid-rWA2EFEjVD h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-rWvkscx2iS p {
+.cid-rWA2EFEjVD p {
   color: #767676;
   text-align: left;
 }
-.cid-rWvkscx2iS .card-wrapper {
+.cid-rWA2EFEjVD .card-wrapper {
   position: relative;
   border-radius: 24px;
   border: 1px solid #3d7476;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-rWvkscx2iS .card-wrapper:hover {
+.cid-rWA2EFEjVD .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-rWvkscx2iS .card-img {
+.cid-rWA2EFEjVD .card-img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
 }
-.cid-rWvkscx2iS .card-title {
-  color: #0fa79c;
+.cid-rWA2EFEjVD .card-title {
+  color: #118c84;
 }
-.cid-rWvksZVFdn {
+.cid-rWA2Fncws6 {
   padding-top: 0px;
   padding-bottom: 45px;
   background-color: #f4fcfc;
 }
-.cid-rWvksZVFdn .card-box {
+.cid-rWA2Fncws6 .card-box {
   border-radius: 24px;
   background-color: #ffffff;
   padding: 1.5rem;
 }
-.cid-rWvksZVFdn h4 {
+.cid-rWA2Fncws6 h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-rWvksZVFdn p {
+.cid-rWA2Fncws6 p {
   color: #767676;
   text-align: left;
 }
-.cid-rWvksZVFdn .card-wrapper {
+.cid-rWA2Fncws6 .card-wrapper {
   position: relative;
   border-radius: 24px;
   border: 1px solid #3d7476;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-rWvksZVFdn .card-wrapper:hover {
+.cid-rWA2Fncws6 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-rWvksZVFdn .card-img {
+.cid-rWA2Fncws6 .card-img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
 }
-.cid-rWvksZVFdn .card-title {
-  color: #0fa79c;
+.cid-rWA2Fncws6 .card-title {
+  color: #118c84;
 }
 .cid-rWvoOxj11S {
   padding-top: 15px;
@@ -1782,7 +1782,7 @@ section.lazy-placeholder:after {
 }
 .cid-rWuMXo9vvG {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 45px;
   background-color: #f7fcfc;
 }
 .cid-rWuMXo9vvG H2 {
@@ -1797,24 +1797,6 @@ section.lazy-placeholder:after {
 .cid-rWuMXo9vvG .mbr-section-btn {
   text-align: left;
   color: #515050;
-}
-.cid-rWuMYiWuiW {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #f7fcfc;
-}
-.cid-rWuMYiWuiW H2 {
-  text-align: left;
-  color: #0c7b7b;
-}
-.cid-rWuMYiWuiW H3 {
-  text-align: left;
-  color: #232323;
-}
-.cid-rWuMYiWuiW .mbr-text,
-.cid-rWuMYiWuiW .mbr-section-btn {
-  text-align: left;
-  color: #716f6f;
 }
 .cid-rWvp0esXgR {
   padding-top: 30px;
